# anteater

./: CMakeLists.txt  LICENSE  Makefile.config.in  NOTICE  README.md
contrib/: boolector-1.4.1-376eb0-110304-support-bool.patch  jruby-1.6.3-ffi-enum-newline.patch
include/anteater/: config.h  types.h
include/anteater/Core/: IRBuilder.h  SymbolicPacket.h
lib/: CMakeLists.txt
lib/Core/: CMakeLists.txt  IRBuilder.cpp  SymbolicPacket.cpp  SymbolicPacketImpl.h
lib/Ruby/: CSVGraph.rb  UnionSet.rb  anteater-ffi.rb  anteater.rb  anteater_config.rb.in  checkers.rb  parallel.rb
lib/Transform/: BareGVN.cpp  CMakeLists.txt  EliminateRedundantPrecondition.cpp  MergePacket.cpp  PacketScalarReplacement.cpp  RemoveAnnotation.cpp
make/: envsetup.sh.in
make/Modules/: FindBoolector.cmake  FindLLVM.cmake  FindTimeout.cmake  FindYices.cmake  FindZ3.cmake
tests/: CMakeLists.txt  unit-test-lib.rb
tests/CSVGraph/: CMakeLists.txt  consistency-checker.rb  consistent-forwarding-1-pair  consistent-forwarding-1-r1  consistent-forwarding-1-r2  consistent-forwarding-1.xml  consistent-forwarding-2-r2  consistent-forwarding-2.xml  loop-detection-1-r1  loop-detection-1-r2  loop-detection-1.xml  loop-detection-2-r1  loop-detection-2.xml  loop-detection-3-r1  loop-detection-3-r2  loop-detection-3-resolv  loop-detection-3.xml  loop-detection-4-r1  loop-detection-4-r2  loop-detection-4-r3  loop-detection-4-resolv  loop-detection-4.xml  loop-detector.rb  packet-loss-1-r1  packet-loss-1.xml  packet-loss-2-r1  packet-loss-2-r2  packet-loss-2-resolv  packet-loss-2.xml  packet-loss-3.xml  packet-loss.rb
tests/all-pair-reachability/: CMakeLists.txt  all-pair-reachability-checker.rb  bridge.xml  default-routing.xml  longest-prefix-matching-1.xml  longest-prefix-matching-2.xml  longest-prefix-matching-3.xml  nat-2.xml  nat.xml  orthogonal-acl.xml  single-acl-1.xml  single-acl-2.xml
tests/slang/: CMakeLists.txt  security-breach-2.xml  security-breach.xml  slang-test.rb
tools/: CMakeLists.txt  CSVGraphTraceroute.rb  consistency-checker.rb  loop-detector-with-transformation.rb  loop-detector.rb  packet-loss.rb
tools/anteatercc/: CMakeLists.txt  anteatercc.cpp
tools/packet-propagation-hint-generator/: CMakeLists.txt  main.cpp
tools/scripts/: Makefile.perf-numbers  Makefile.rules  Makefile.solve  bin-ip-filter.py  merge-packet.rb
tools/scripts/canonicalization/: cisco-cleanup.py  cisco-to-csv.py  foundry-new-to-csv.awk  foundry-old-to-csv.awk  foundry-with-mask-cleanup.py  foundry-with-netmask-to-csv.awk  gen-equiv-class.py  gen-ip-aliasing-from-if-data.sh  ip-aliasing-filter-duplicate.py  ip-aliasing-merge.py  ip-aliasing.py  junos-cleanup.py  junos-to-csv.sed  parse-cisco-data.sh  parse-foundry-data.sh  parse-junos-data.sh  parsing_utils.py
tools/whitelistor/: CMakeLists.txt  whitelistor.cpp
